add: quality formula
